添加滑动切换panel

--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
 	<script egret="game" src="bin-debug/component/EButton.js"></script>
 	<script egret="game" src="bin-debug/component/EImage.js"></script>
 	<script egret="game" src="bin-debug/component/ETextField.js"></script>
-	<script egret="game" src="bin-debug/config/GameConfig.js"></script>
-	<script egret="game" src="bin-debug/config/GlobalData.js"></script>
 	<script egret="game" src="bin-debug/constants/MainNotify.js"></script>
 	<script egret="game" src="bin-debug/constants/PanelNotify.js"></script>
 	<script egret="game" src="bin-debug/constants/SceneNotify.js"></script>
@@ -68,10 +66,14 @@
 	<script egret="game" src="bin-debug/core/view/panel/base/BaseMediator.js"></script>
 	<script egret="game" src="bin-debug/core/view/panel/base/PopUpManager.js"></script>
 	<script egret="game" src="bin-debug/core/view/panel/mediator/PageAMediator.js"></script>
+	<script egret="game" src="bin-debug/core/view/panel/mediator/PageBMediator.js"></script>
 	<script egret="game" src="bin-debug/core/view/panel/ui/PageA.js"></script>
+	<script egret="game" src="bin-debug/core/view/panel/ui/PageB.js"></script>
 	<script egret="game" src="bin-debug/core/view/panel/ui/PageCloseBtn.js"></script>
 	<script egret="game" src="bin-debug/core/view/scene/manager/SceneManager.js"></script>
 	<script egret="game" src="bin-debug/core/view/scene/ui/HomeCity.js"></script>
+	<script egret="game" src="bin-debug/Global/GlobalConfig.js"></script>
+	<script egret="game" src="bin-debug/Global/GlobalData.js"></script>
 	<script egret="game" src="bin-debug/loading/AssetAdapter.js"></script>
 	<script egret="game" src="bin-debug/loading/LoadingPanel.js"></script>
 	<script egret="game" src="bin-debug/loading/WaitPanel.js"></script>
@@ -99,8 +101,8 @@
          data-content-height="1136"
          data-show-paint-rect="false"
          data-multi-fingered="2"
-         data-show-fps="false" data-show-log="false"
-         data-log-filter="" data-show-fps-style="x:0,y:0,size:30,textColor:0x00c200,bgAlpha:0.9">
+         data-show-fps="true" data-show-log="false"
+         data-log-filter="" data-show-fps-style="x:0,y:0,size:12,textColor:0x00c200,bgAlpha:0.9">
     </div>
     <script>
         /**
